public/styles/styles-main.css
/* ... */
x-toast.top-row {
    top: 3px;
}

x-toast:not([show]) {
    opacity: 0;
    transform: translateY(calc(-100% + -55px));
}

x-toast span {
    flex-grow: 1;
    margin: auto 4px auto 10px
}

x-dialog[show] ~ div x-toast {
    background-color: var(--lt-dialog-bg-color);
    color: rgb(var(--lt-text-color));
}

/* Instructions */

x-instructions {
    display: flex;
    position: relative;
    opacity: 0.5;
    text-align: center;
    margin: 50px 10px 0px;
    flex-direction: column;
    justify-content: center;
}

x-instructions:not([drop-peer]):not([drop-bg]):before {
    content: attr(mobile);
}

x-instructions[drop-peer]:before {
    content: attr(data-drop-peer);
}

x-instructions[drop-bg]:not([drop-peer]):before {
    content: attr(data-drop-bg);
}


x-peers:empty,
x-peers:empty~x-instructions {
    display: none;
}

@media (hover: none) and (pointer: coarse) {
    x-peer {
        transform: scale(0.95);
        padding: 4px;
    }
}

/* Prevent Cumulative Layout Shift */

.fade-in {
    animation: fade-in 600ms;
    animation-fill-mode: backwards;
}

.no-animation-on-load {
    animation-iteration-count: 0;
}

.opacity-0 {
    opacity: 0;
}

/* Responsive Styles */

@media screen and (min-height: 800px) {
    footer {
        margin-bottom: 16px;
    }
}

@media (hover: hover) and (pointer: fine) {
    x-instructions:not([drop-peer]):not([drop-bg]):before {
        content: attr(desktop);
    }
}

/* Constants */

:root {
    --icon-size: 24px;
    --peer-width: 120px;
    color-scheme: light dark;
}

/*
    Color Themes
*/

/* Default colors */
body {
    /* Constant colors */
    --primary-color: #4285f4;
    --paired-device-color: #00a69c;
    --public-room-color: #ed9d01;
    --accent-color: var(--primary-color);
    --ws-peer-color: #ff6b6b;
    --btn-disabled-color: #5B5B66;

    /* shadows */
    --shadow-color-rgb: var(--text-color);
    --shadow-color-cover-rgb: var(--bg-color);

    /* Light theme colors */
    --lt-text-color: 51,51,51;
    --lt-dialog-bg-color: #fff;
    --lt-bg-color: 255,255,255;
    --lt-bg-color-secondary: #f2f2f2;
    --lt-border-color: #a9a9a9;
    --lt-badge-color: #a5a5a5;

    --lt-shadow-color-secondary-rgb: 0,0,0;
    --lt-shadow-color-secondary-cover-rgb: 242,242,242;
    --lt-shadow-color-dialog-rgb: 0,0,0;
    --lt-shadow-color-dialog-cover-rgb: 242,242,242;

    /* Dark theme colors */
    --dt-text-color: 238,238,238;
    --dt-dialog-bg-color: #141414;
    --dt-bg-color: 0,0,0;
    --dt-bg-color-secondary: #262628;
    --dt-border-color: #919191;
    --dt-badge-color: #717171;

    --dt-shadow-color-secondary-rgb: 255,255,255;
    --dt-shadow-color-secondary-cover-rgb: 38,38,38;
    --dt-shadow-color-dialog-rgb: 255,255,255;
    --dt-shadow-color-dialog-cover-rgb: 38,38,38;
}

/* Light theme colors */
body {
    --text-color: var(--lt-text-color);
    --dialog-bg-color: var(--lt-dialog-bg-color);
    --bg-color: var(--lt-bg-color);
    --bg-color-secondary: var(--lt-bg-color-secondary);
    --border-color: var(--lt-border-color);
    --badge-color: var(--lt-badge-color);

    --shadow-color-secondary-rgb: var(--lt-shadow-color-secondary-rgb);
    --shadow-color-secondary-cover-rgb: var(--lt-shadow-color-secondary-cover-rgb);
    --shadow-color-dialog-rgb: var(--lt-shadow-color-dialog-rgb);
    --shadow-color-dialog-cover-rgb: var(--lt-shadow-color-dialog-cover-rgb);
}

/* Dark theme colors */
body.dark-theme {
    --text-color: var(--dt-text-color);
    --dialog-bg-color: var(--dt-dialog-bg-color);
    --bg-color: var(--dt-bg-color);
    --bg-color-secondary: var(--dt-bg-color-secondary);
    --border-color: var(--dt-border-color);
    --badge-color: var(--dt-badge-color);

    --shadow-color-secondary-rgb: var(--dt-shadow-color-secondary-rgb);
    --shadow-color-secondary-cover-rgb: var(--dt-shadow-color-secondary-cover-rgb);
    --shadow-color-dialog-rgb: var(--dt-shadow-color-dialog-rgb);
    --shadow-color-dialog-cover-rgb: var(--dt-shadow-color-dialog-cover-rgb);
}

/* Styles for users who prefer dark mode at the OS level */
@media (prefers-color-scheme: dark) {

    /* defaults to dark theme */
    body {
        --text-color: var(--dt-text-color);
        --dialog-bg-color: var(--dt-dialog-bg-color);
        --bg-color: var(--dt-bg-color);
        --bg-color-secondary: var(--dt-bg-color-secondary);
        --border-color: var(--dt-border-color);
        --badge-color: var(--dt-badge-color);

        --shadow-color-secondary-rgb: var(--dt-shadow-color-secondary-rgb);
        --shadow-color-secondary-cover-rgb: var(--dt-shadow-color-secondary-cover-rgb);
        --shadow-color-dialog-rgb: var(--dt-shadow-color-dialog-rgb);
        --shadow-color-dialog-cover-rgb: var(--dt-shadow-color-dialog-cover-rgb);
    }


    /* Override dark mode with light mode styles if the user decides to swap */
    body.light-theme {
        --text-color: var(--lt-text-color);
        --dialog-bg-color: var(--lt-dialog-bg-color);
        --bg-color: var(--lt-bg-color);
        --bg-color-secondary: var(--lt-bg-color-secondary);
        --border-color: var(--lt-border-color);
        --badge-color: var(--lt-badge-color);

        --shadow-color-secondary-rgb: var(--lt-shadow-color-secondary-rgb);
        --shadow-color-secondary-cover-rgb: var(--lt-shadow-color-secondary-cover-rgb);
        --shadow-color-dialog-rgb: var(--lt-shadow-color-dialog-rgb);
        --shadow-color-dialog-cover-rgb: var(--lt-shadow-color-dialog-cover-rgb);
    }
}

/* Colored Elements */
body {
    color: rgb(var(--text-color));
    background-color: rgb(var(--bg-color));
    transition: background-color 0.5s ease;
}

/* Gradient for wifi-tether icon */
#primaryGradient .start-color {
    stop-color: var(--primary-color);
}

@supports (stop-color: color-mix(in srgb, blue 50%, black)) {
    #primaryGradient .start-color {
        stop-color: color-mix(in srgb, var(--primary-color) 80%, white);
    }
}

#primaryGradient .stop-color {
    stop-color: var(--primary-color);
}
/* ... */

